--- a/server/siteServer/static/show_data.css
+++ b/server/siteServer/static/show_data.css
@@ -36,9 +36,19 @@ h1 {
   width: 1800px;
 }
 
+.message-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 24px;
+  /* 透明边框 */
+  border:0cm;
+}
+
 .message {
-  color: #99CC33;
-  margin: 20px;
-  font-size: 20px;
-  text-align: center;
+  width: 50%; 
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  color: #003333
 }
